--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Icons\bin.png" />
+    <None Remove="Resources\Icons\checkmark.png" />
     <None Remove="Resources\Icons\common\arrow-down.png" />
     <None Remove="Resources\Icons\common\arrow-left.png" />
     <None Remove="Resources\Icons\common\arrow-right.png" />
@@ -32,10 +34,14 @@
     <None Remove="Resources\Icons\common\download2.png" />
     <None Remove="Resources\Icons\common\pencil.png" />
     <None Remove="Resources\Icons\common\plus.png" />
+    <None Remove="Resources\Icons\database.png" />
+    <None Remove="Resources\Icons\floppy-disk.png" />
+    <None Remove="Resources\Icons\folder-open.png" />
     <None Remove="Resources\Icons\frame\frame-dragndrop-white.png" />
     <None Remove="Resources\Icons\frame\frame-duplicate-white.png" />
     <None Remove="Resources\Icons\frame\frame-plus-white.png" />
     <None Remove="Resources\Icons\frame\frame-recyclebin-white.png" />
+    <None Remove="Resources\Icons\merge_palettes.png" />
     <None Remove="Resources\Icons\settings\settings-file-white.png" />
     <None Remove="Resources\Icons\settings\settings-gear-white.png" />
     <None Remove="Resources\Icons\settings\settings-resize-white.png" />
@@ -75,12 +81,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Icons\bin.png" />
+    <Resource Include="Resources\Icons\checkmark.png" />
     <Resource Include="Resources\Icons\common\arrow-left.png" />
     <Resource Include="Resources\Icons\common\arrow-right.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PixiEditor.ColorPicker" Version="3.4.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
     <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
@@ -96,10 +106,14 @@
     <Resource Include="Resources\Icons\common\download2.png" />
     <Resource Include="Resources\Icons\common\pencil.png" />
     <Resource Include="Resources\Icons\common\plus.png" />
+    <Resource Include="Resources\Icons\database.png" />
+    <Resource Include="Resources\Icons\floppy-disk.png" />
+    <Resource Include="Resources\Icons\folder-open.png" />
     <Resource Include="Resources\Icons\frame\frame-dragndrop-white.png" />
     <Resource Include="Resources\Icons\frame\frame-duplicate-white.png" />
     <Resource Include="Resources\Icons\frame\frame-plus-white.png" />
     <Resource Include="Resources\Icons\frame\frame-recyclebin-white.png" />
+    <Resource Include="Resources\Icons\merge_palettes.png" />
     <Resource Include="Resources\Icons\settings\settings-file-white.png" />
     <Resource Include="Resources\Icons\settings\settings-gear-white.png" />
     <Resource Include="Resources\Icons\settings\settings-resize-white.png" />
