--- a/Pixed.Desktop/Pixed.Desktop.csproj
+++ b/Pixed.Desktop/Pixed.Desktop.csproj
@@ -14,6 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pixed.Core\Pixed.Core.csproj" />
+    <ProjectReference Include="..\Pixed\Pixed.csproj" />
   </ItemGroup>
 </Project>
