--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0.4" />
     <PackageReference Include="BigGustave" Version="1.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
+    <PackageReference Include="LZMA-SDK" Version="22.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PixiEditor.ColorPicker.AvaloniaUI" Version="1.0.6" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
