--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.3" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.3" />
+    <PackageReference Include="Avalonia.Themes.Simple" Version="11.1.3" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0.4" />
     <PackageReference Include="BigGustave" Version="1.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
