--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="BigGustave" Version="1.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
     <PackageReference Include="LZMA-SDK" Version="22.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PixiEditor.ColorPicker.AvaloniaUI" Version="1.0.6" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
