--- a/Pixed.Desktop/Pixed.Desktop.csproj
+++ b/Pixed.Desktop/Pixed.Desktop.csproj
@@ -6,13 +6,15 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>../Pixed/Resources/icon.ico</ApplicationIcon>
     <AssemblyName>Pixed</AssemblyName>
+    <Platforms>AnyCPU;x64</Platforms>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
   <PropertyGroup Label="Avalonia">
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
     <PlatformTarget>x64</PlatformTarget>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   
   <ItemGroup>
