--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: Pixed.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      Solution_Name: PixedForGithub.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
       Test_Project_Path: Pixed\Pixed.Tests\Pixed.Tests.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
 
     steps:
