--- a/Pixed.Desktop/Pixed.Desktop.csproj
+++ b/Pixed.Desktop/Pixed.Desktop.csproj
@@ -15,6 +15,7 @@
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
     <PlatformTarget>x64</PlatformTarget>
     <NoWin32Manifest>true</NoWin32Manifest>
+    <AssemblyVersion>1.1</AssemblyVersion>
   </PropertyGroup>
   
   <ItemGroup>
