--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Avalonia.Themes.Simple" Version="11.1.3" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0.4" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
+    <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.8" />
     <PackageReference Include="MateuszNejman.LZMA_SDK" Version="24.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
