--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>Pixed.Core</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
     <Platforms>AnyCPU;x64</Platforms>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Avalonia" Version="11.1.4" />
+	<PackageReference Include="Avalonia.Skia" Version="11.1.4" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.4" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.4" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
