--- a/Pixed.Desktop/Pixed.Desktop.csproj
+++ b/Pixed.Desktop/Pixed.Desktop.csproj
@@ -10,6 +10,7 @@
     <AssemblyName>Pixed</AssemblyName>
     <Platforms>AnyCPU;x64</Platforms>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <BaseOutputPath>$(SolutionDir)build\Pixed.Desktop</BaseOutputPath>
   </PropertyGroup>
   <PropertyGroup Label="Avalonia">
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
