--- a/Pixed.Tests/Pixed.Tests.csproj
+++ b/Pixed.Tests/Pixed.Tests.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <BaseOutputPath>$(SolutionDir)build\Pixed.Tests</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
