--- a/Pixed/Pixed.csproj
+++ b/Pixed/Pixed.csproj
@@ -9,6 +9,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <Platforms>AnyCPU;x64</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <BaseOutputPath>$(SolutionDir)build\Pixed</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
