--- a/Pixed.Common/Pixed.Common.csproj
+++ b/Pixed.Common/Pixed.Common.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
-    <AssemblyName>Pixed.Core</AssemblyName>
+    <AssemblyName>Pixed.Common</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
     <Platforms>AnyCPU;x64</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
