--- a/Pixed.Application/Pixed.Application.csproj
+++ b/Pixed.Application/Pixed.Application.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Avalonia" Version="11.1.4" />
+	<PackageReference Include="Avalonia.Controls.PanAndZoom" Version="11.1.0.1" />
 	<PackageReference Include="Avalonia.Skia" Version="11.1.4" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.4" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.4" />
