Pixed.BigGustave for PNG manipulation added; Remove System.Drawing.Common nuget reference

--- a/Pixed.Application/Pixed.Application.csproj
+++ b/Pixed.Application/Pixed.Application.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Pixed.BigGustave\Pixed.BigGustave.csproj" />
     <ProjectReference Include="..\Pixed.Common\Pixed.Common.csproj" />
   </ItemGroup>
 </Project>
