--- a/Pixed.Windows/Pixed.Windows.csproj
+++ b/Pixed.Windows/Pixed.Windows.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="11.1.4" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.2" />
+    <PackageReference Include="AvaloniaInside.Shell" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
