--- a/Pixed.Common/Pixed.Common.csproj
+++ b/Pixed.Common/Pixed.Common.csproj
@@ -14,8 +14,8 @@
 
   <ItemGroup>
 	<PackageReference Include="Avalonia" Version="11.2.2" />
+	<PackageReference Include="Avalonia.ReactiveUI" Version="11.2.2" />
 	<PackageReference Include="Avalonia.Skia" Version="11.2.2" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
     <PackageReference Include="MateuszNejman.LZMA_SDK" Version="24.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
