--- a/Pixed.Core/Pixed.Core.csproj
+++ b/Pixed.Core/Pixed.Core.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.2" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.2" />
     <PackageReference Include="Avalonia.Skia" Version="11.2.2" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SkiaSharp" Version="2.88.9" />
   </ItemGroup>
