--- a/Pixed.Android/Properties/AndroidManifest.xml
+++ b/Pixed.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed" android:versionCode="1.7" android:versionName="1.7">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed" android:versionCode="17" android:versionName="1.7">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:label="Pixed" android:icon="@mipmap/pixed_icon" />
+	<application android:label="Pixed" android:icon="@mipmap/pixed_icon" android:theme="@style/MyTheme.NoActionBar" />
 </manifest>
