--- a/Pixed.Application/Pixed.Application.csproj
+++ b/Pixed.Application/Pixed.Application.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PixiEditor.ColorPicker.AvaloniaUI" Version="1.0.6" />
     <PackageReference Include="SkiaSharp" Version="3.116.1" />
+    <PackageReference Include="Svg.Skia" Version="2.0.0.4" />
     <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
 
