--- a/Pixed.Application/Pixed.Application.csproj
+++ b/Pixed.Application/Pixed.Application.csproj
@@ -24,6 +24,7 @@
 	<PackageReference Include="Avalonia" Version="11.2.3" />
 	<PackageReference Include="Avalonia.ReactiveUI" Version="11.2.3" />
 	<PackageReference Include="Avalonia.Skia" Version="11.2.3" />
+	<PackageReference Include="Avalonia.Svg.Skia" Version="11.2.0.2" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.3" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
