--- a/Pixed.Android/Pixed.Android.csproj
+++ b/Pixed.Android/Pixed.Android.csproj
@@ -14,6 +14,7 @@
     <AndroidUseAapt2>True</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
     <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AndroidUseAapt2>True</AndroidUseAapt2>
