--- a/Pixed.Android/Properties/AndroidManifest.xml
+++ b/Pixed.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed" android:versionCode="19" android:versionName="1.9">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed" android:versionCode="110000" android:versionName="1.10">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Pixed" android:icon="@mipmap/pixed_icon" android:theme="@style/Theme.Splash" />
 </manifest>
