--- a/Pixed.Desktop/Pixed.Desktop.csproj
+++ b/Pixed.Desktop/Pixed.Desktop.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <!--If you are willing to use Windows/MacOS native APIs you will need to create 3 projects.
@@ -16,7 +16,7 @@
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
     <PlatformTarget>x64</PlatformTarget>
     <NoWin32Manifest>true</NoWin32Manifest>
-    <AssemblyVersion>1.9</AssemblyVersion>
+    <AssemblyVersion>1.10</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
