--- a/Pixed.Application/Pixed.Application.csproj
+++ b/Pixed.Application/Pixed.Application.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="Avalonia.Themes.Simple" Version="11.3.0" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0" />
     <PackageReference Include="AvaloniaInside.Shell" Version="1.3.1" />
-    <PackageReference Include="Deadpikle.AvaloniaProgressRing" Version="0.10.10" />
+    <PackageReference Include="LoadingIndicators.Avalonia" Version="11.0.11.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PixiEditor.ColorPicker.AvaloniaUI" Version="1.0.7" />
