--- a/Pixed.AndroidDev/Properties/AndroidManifest.xml
+++ b/Pixed.AndroidDev/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed_dev" android:versionCode="1" android:versionName="1.0">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.nejman.pixed_dev" android:versionCode="115000" android:versionName="1.15">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Pixed - Dev" android:icon="@mipmap/pixed_icon" android:theme="@style/Theme.Splash" />
 </manifest>
