--- a/Pixed.Android/Pixed.Android.csproj
+++ b/Pixed.Android/Pixed.Android.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <PackageReference Include="Avalonia.Android" Version="11.3.8" />
     <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.17" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.13.0" />
+    <PackageReference Include="Xamarin.Google.Android.Play.App.Update" Version="2.1.0.16" />
   </ItemGroup>
 
   <ItemGroup>
