--- a/Pixed.Common/Pixed.Common.csproj
+++ b/Pixed.Common/Pixed.Common.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>True</AvaloniaUseCompiledBindingsByDefault>
     <AssemblyName>Pixed.Common</AssemblyName>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Platforms>AnyCPU;x64</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <BaseOutputPath>$(SolutionDir)build\Pixed</BaseOutputPath>
