--- a/Pixed.Exporter/Pixed.Exporter.csproj
+++ b/Pixed.Exporter/Pixed.Exporter.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
 	<BaseOutputPath>$(SolutionDir)build\Pixed.Exporter</BaseOutputPath>
 	<AssemblyVersion>1.15</AssemblyVersion>
+	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
