--- a/Pixed.VersionChanger/Pixed.VersionChanger.csproj
+++ b/Pixed.VersionChanger/Pixed.VersionChanger.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<BaseOutputPath>$(SolutionDir)build\VersionChanger</BaseOutputPath>
+	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 </Project>
